fix display new buttons on mobile

--- a/src/components/Contacts/Contacts.module.scss
+++ b/src/components/Contacts/Contacts.module.scss
@@ -114,7 +114,7 @@
         }
 
         &:hover {
-          background-color: #3d3d3d;
+          background-color: #424649;
         }
 
         &:active {
