--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -153,6 +153,7 @@
       justify-content: flex-start;
       gap: 45px;
       padding-top: 100px;
+      padding-bottom: 100px;
     }
 
     .photo {
@@ -168,6 +169,17 @@
       align-items: center;
       width: 90vw;
       word-break: break-word;
+
+      .cv {
+        button {
+          padding: 0.75rem 1.5rem;
+        }
+
+        h3 {
+          font-size: 16px;
+          gap: 5px;
+        }
+      }
 
       h1 {
         font-family: 'Poppins-Regular', 'Golos_Text', sans-serif;
